--- a/index.html
+++ b/index.html
@@ -347,7 +347,7 @@ permalink: /
               <i class="icon-laptop3"></i>
             </div>
             <div class="text">
-              <h3 class="heading">Aplicaciones <br> Web</h3></div><hr>
+              <h3 class="heading">Aplicaciones Web</h3></div><hr>
               <p>Independientemente de la industria; finanzas, automotriz, agroindustria, e-commerce, retail y muchas más, AM Software ha creado aplicaciones para clientes de todo el mundo. Creamos aplicaciones web con los más altos estándares y experiencia de usuario que además están destinadas incrementar su productividad y sus ganancias.</p>
               <!--<p><a href="single-page.html">Más</a></p>-->
             </div>
@@ -361,7 +361,7 @@ permalink: /
               <i class="icon-mobile3"></i>
             </div>
             <div class="text">
-              <h3 class="heading">Aplicaciones <br> Móviles</h3></div><hr>
+              <h3 class="heading">Aplicaciones Móviles</h3></div><hr>
               <p>Las aplicaciones móviles se han vuelto cruciales en el entorno comercial actual. En AM Software, creamos aplicaciones móviles de la más alta calidad que se adaptan perfectamente a los objetivos y necesidades de su negocio.</p>
               <!--<p><a href="single-page.html">Más</a></p>-->
             </div>
@@ -421,7 +421,7 @@ permalink: /
               <i class="icon-stats-bars"></i>
             </div>
             <div class="text">
-              <h3 class="heading">Sistemas <br> Empresariales</h3></div><hr>
+              <h3 class="heading">Sistemas Empresariales</h3></div><hr>
               <p>Nuestras soluciones de software empresarial están orientadas a satisfacer las necesidades específicas de las organizaciones y empresas mediante un enfoque de desarrollo modular con el objetivo de aumentar la productividad e incrementar la tasa de conversión en cualquier industria.</p>
               <!--<p><a href="single-page.html">Más</a></p>-->
             </div>
@@ -477,7 +477,7 @@ permalink: /
               <i class="icon-lifebuoy"></i>
             </div>
             <div class="text">
-              <h3 class="heading">Soporte <br> Técnico</h3></div><hr>
+              <h3 class="heading">Soporte Técnico</h3></div><hr>
               <p>Proporcionamos un servicio de soporte técnico integral y permanente para una amplia gama de empresas en diversas industrias.</p>
               <!--<p><a href="single-page.html">Más</a></p>-->
             </div>
@@ -573,7 +573,7 @@ permalink: /
               <i class="icon-users"></i>
             </div>
             <div class="text">
-              <h3 class="heading">Sistema de <br> Gestión de <br> Clientes</h3></div><hr>
+              <h3 class="heading">Sistema de Gestión de Clientes</h3></div><hr>
               <p>Mantenga actualizada la información de sus clientes y haga ofertas personalizadas por medio de su sitio web y otros medios como redes sociales y e-mail.</p>
               <!--<p><a href="single-page.html">Más</a></p>-->
             </div>
@@ -655,7 +655,7 @@ permalink: /
               <i class="icon-key2"></i>
             </div>
             <div class="text">
-              <h3 class="heading">Acepte <br> Criptomonedas</h3></div><hr>
+              <h3 class="heading">Acepte Criptomonedas</h3></div><hr>
               <p>Acepte las mayores criptomonedas del mundo como Bitcoin, Bitcoin Cash, Ethereum, Litecoin, Ripple y muchas más de manera segura. </p>
               <!--<p><a href="single-page.html">Más</a></p>-->
             </div>
@@ -747,7 +747,7 @@ permalink: /
               <i class="icon-lab"></i>
             </div>
             <div class="text">
-              <h3 class="heading">Sitios <br> Avanzados</h3></div><hr>
+              <h3 class="heading">Sitios Avanzados</h3></div><hr>
               <p>Sitios con funcionalidad avanzada. Bases de datos especializadas. Accesos de usuarios. Publique un blog dentro del sitio de su empresa para atraer nuevos clientes e interactuar con los existentes. Foros de discusión. Live streaming. Y más.</p>
               <!--<p><a href="single-page.html">Más</a></p>-->
             </div>
