--- a/software.html
+++ b/software.html
@@ -58,7 +58,7 @@ permalink: /software
               <i class="icon-laptop3"></i>
             </div>
             <div class="text">
-              <h3 class="heading">Aplicaciones <br> Web</h3></div><hr>
+              <h3 class="heading">Aplicaciones Web</h3></div><hr>
               <p>Independientemente de la industria; finanzas, automotriz, agroindustria, e-commerce, retail y muchas más, AM Software ha creado aplicaciones para clientes de todo el mundo. Creamos aplicaciones web con los más altos estándares y experiencia de usuario que además están destinadas incrementar su productividad y sus ganancias.</p>
               <!--<p><a href="single-page.html">Más</a></p>-->
             </div>
@@ -71,7 +71,7 @@ permalink: /software
               <i class="icon-mobile3"></i>
             </div>
             <div class="text">
-              <h3 class="heading">Aplicaciones <br> Móviles</h3></div><hr>
+              <h3 class="heading">Aplicaciones Móviles</h3></div><hr>
               <p>Las aplicaciones móviles se han vuelto cruciales en el entorno comercial actual. En AM Software, creamos aplicaciones móviles de la más alta calidad que se adaptan perfectamente a los objetivos y necesidades de su negocio.</p>
               <!--<p><a href="single-page.html">Más</a></p>-->
             </div>
@@ -128,7 +128,7 @@ permalink: /software
               <i class="icon-stats-bars"></i>
             </div>
             <div class="text">
-              <h3 class="heading">Sistemas <br> Empresariales</h3></div><hr>
+              <h3 class="heading">Sistemas Empresariales</h3></div><hr>
               <p>Nuestras soluciones de software empresarial están orientadas a satisfacer las necesidades específicas de las organizaciones y empresas mediante un enfoque de desarrollo modular con el objetivo de aumentar la productividad e incrementar la tasa de conversión en cualquier industria.</p>
               <!--<p><a href="single-page.html">Más</a></p>-->
             </div>
@@ -184,7 +184,7 @@ permalink: /software
               <i class="icon-lifebuoy"></i>
             </div>
             <div class="text">
-              <h3 class="heading">Soporte <br> Técnico</h3></div><hr>
+              <h3 class="heading">Soporte Técnico</h3></div><hr>
               <p>Proporcionamos un servicio de soporte técnico integral y permanente para una amplia gama de empresas en diversas industrias.</p>
               <!--<p><a href="single-page.html">Más</a></p>-->
             </div>
