--- a/branding.html
+++ b/branding.html
@@ -388,7 +388,7 @@ permalink: /branding
         <br><h2 class="mb20" style="color:#ffffff; font-size: 150%;">TAMBIÉN OFRECEMOS PAQUETES A LA MEDIDA PARA SATISFACER TUS NECESIDADES ESPECÍFICAS. <br> CONTÁCTANOS HOY PARA RECIBIR UNA COTIZACIÓN PERSONALIZADA.</h2><br>
       <!--<p>.</p>-->
         <div class="probootstrap-link-wrap">
-          <p><a href="/contacto" role="button" class="btn btn-primary">Cotizar</a></p>
+          <p><a href="/contacto" role="button" class="btn btn-subscribe">Cotizar</a></p>
         </div>
 </div>
 
