--- a/ecommerce.html
+++ b/ecommerce.html
@@ -70,7 +70,7 @@ permalink: /ecommerce
               <div class="icon">
               <i class="icon-users"></i>
             </div><div class="text">
-              <h3 class="heading">Sistema de <br> Gestión de <br> Clientes</h3></div><hr>
+              <h3 class="heading">Sistema de Gestión de Clientes</h3></div><hr>
               <p>Mantenga actualizada la información de sus clientes y haga ofertas personalizadas por medio de su sitio web y otros medios como redes sociales y e-mail.</p>
               <!--<p><a href="single-page.html">Más</a></p>-->
             </div>
@@ -161,7 +161,7 @@ permalink: /ecommerce
               <i class="icon-key2"></i>
             </div>
             <div class="text">
-              <h3 class="heading">Acepte <br> Criptomonedas</h3></div><hr>
+              <h3 class="heading">Acepte Criptomonedas</h3></div><hr>
               <p>Acepte las mayores criptomonedas del mundo como Bitcoin, Bitcoin Cash, Ethereum, Litecoin, Ripple y muchas más de manera segura. </p>
               <!--<p><a href="single-page.html">Más</a></p>-->
             </div>
