--- a/web.html
+++ b/web.html
@@ -79,7 +79,7 @@ permalink: /web
               <i class="icon-lab"></i>
             </div>
             <div class="text">
-              <h3 class="heading">Sitios <br> Avanzados</h3></div><hr>
+              <h3 class="heading">Sitios Avanzados</h3></div><hr>
               <p>Sitios con funcionalidad avanzada. Bases de datos especializadas. Accesos de usuarios. Publique un blog dentro del sitio de su empresa para atraer nuevos clientes e interactuar con los existentes. Foros de discusión. Live streaming. Y más.</p>
               <!--<p><a href="single-page.html">Más</a></p>-->
             </div>
@@ -272,7 +272,7 @@ permalink: /web
         <br><h2 class="mb20" style="color:#ffffff; font-size: 150%;">Aprende más sobre lo que significa tener una prescencia en línea y entérate por qué en el año 2019 si una empresa no tiene un sitio web, está literalmente muerta.</h2><br>
       <!--<p>.</p>-->
         <div class="probootstrap-link-wrap">
-          <p><a href="https://mailchi.mp/917b21d80251/amsoftware_subscribir" role="button" class="btn btn-primary">Descargar</a></p>
+          <p><a href="https://mailchi.mp/917b21d80251/amsoftware_subscribir" role="button" class="btn btn-subscribe">Descargar</a></p>
         </div>
       </div>
     </div>
