--- a/branding.html
+++ b/branding.html
@@ -190,7 +190,7 @@ permalink: /branding
       <h4 class="plan-title">
         STARTUP
       </h4>
-      <div class="plan-cost"><span class="plan-price">$249.99</span><span class="plan-type">/Mes</span></div>
+      <div class="plan-cost"><span class="plan-price">$249.99</span><span class="plan-type"></span></div>
     </header>
     <ul class="plan-features">
       <li><i class="icon-checkmark" style="color:#ffffff;"> </i>Logo</li>
@@ -209,7 +209,7 @@ permalink: /branding
       <h4 class="plan-title">
         PRO
       </h4>
-      <div class="plan-cost"><span class="plan-price">$349.99</span><span class="plan-type">/Mes</span></div>
+      <div class="plan-cost"><span class="plan-price">$349.99</span><span class="plan-type"></span></div>
     </header>
     <ul class="plan-features">
       <li><i class="icon-checkmark" style="color:#ffffff;"> </i>Logo</li>
@@ -228,7 +228,7 @@ permalink: /branding
       <h4 class="plan-title">
         PREMIUM
       </h4>
-      <div class="plan-cost"><span class="plan-price">$499.99</span><span class="plan-type">/Mes</span></div>
+      <div class="plan-cost"><span class="plan-price">$499.99</span><span class="plan-type"></span></div>
     </header>
     <ul class="plan-features">
       <li><i class="icon-checkmark" style="color:#ffffff;"> </i>Logo</li>
@@ -247,7 +247,7 @@ permalink: /branding
       <h4 class="plan-title">
         GOLD
       </h4>
-      <div class="plan-cost"><span class="plan-price">$699.99</span><span class="plan-type">/Mes</span></div>
+      <div class="plan-cost"><span class="plan-price">$699.99</span><span class="plan-type"></span></div>
     </header>
     <ul class="plan-features">
       <li><i class="icon-checkmark" style="color:#ffffff;"> </i>Logo</li>
