--- a/ecommerce.html
+++ b/ecommerce.html
@@ -184,13 +184,13 @@ permalink: /ecommerce
   <div class="plan pro">
     <header>
       <h4 class="plan-title">
-        HAYCOMERCIO
+        ECONÓMICO
       </h4>
-      <div class="plan-cost"><span class="plan-type">Desde </span><span class="plan-price">$149.99</span></div>
+      <div class="plan-cost"><span class="plan-type">Desde </span><span class="plan-price">$249.99</span></div>
     </header>
     <ul class="plan-features">
-      <li><i class="icon-checkmark" style="color:#ffffff;"> </i>Válido para Empresas en Nicaragua</li>
-      <li><i class="icon-checkmark" style="color:#ffffff;"> </i>Integrado dentro de la Plataforma HayComercio.com</li>
+      <li><i class="icon-checkmark" style="color:#ffffff;"> </i>Para Empresas en Todo el Mundo</li>
+      <li><i class="icon-checkmark" style="color:#ffffff;"> </i>Integrado con su propio sitio web</li>
 <li><i class="icon-checkmark" style="color:#ffffff;"> </i>Sistema de Administración de contenido</li>
 <li><i class="icon-checkmark" style="color:#ffffff;"> </i>Catálogo de Productos (Con Imágenes y Videos)</li>
 <li><i class="icon-checkmark" style="color:#ffffff;"> </i>Carrito de Compras</li>
@@ -214,7 +214,7 @@ permalink: /ecommerce
   <div class="plan featured">
     <header>
       <h4 class="plan-title">
-        E-COMMERCE
+        COMPLETO
       </h4>
       <div class="plan-cost"><span class="plan-type">Desde </span><span class="plan-price">$599.99</span></div>
     </header>
