--- a/about.html
+++ b/about.html
@@ -119,24 +119,24 @@ permalink: /nosotros
         <div class="col-md-4 probootstrap-animate">
           <div class="probootstrap-card">
             <div class="probootstrap-card-media">
-              <a target="_blank" href="http://amsoftware.biz"><img src="img/projects/project-1.png" class="img-responsive img-border" alt=""></a>
+              <a target="_blank" href="http://nica.space"><img src="img/projects/project-1.png" class="img-responsive img-border" alt=""></a>
             </div>
           </div>
         </div>
         <div class="col-md-4 probootstrap-animate">
           <div class="probootstrap-card">
             <div class="probootstrap-card-media">
-              <a target="_blank" href="http://amsoftware.info"><img src="img/projects/project-2.png" class="img-responsive img-border" alt=""></a>
+              <a target="_blank" href="http://nica.guru"><img src="img/projects/project-2.png" class="img-responsive img-border" alt=""></a>
             </div>
         </div>
       </div>
         <div class="col-md-4 probootstrap-animate">
           <div class="probootstrap-card">
             <div class="probootstrap-card-media">
-              <a target="_blank" href="http://haycomercio.com"><img src="img/projects/project-3.png" class="img-responsive img-border" alt=""></a>
+              <a target="_blank" href="http://carfreak.club"><img src="img/projects/project-6.png" class="img-responsive img-border" alt=""></a>
             </div>
           </div>
-        </div>
+        </div>        
         <div class="col-md-4 probootstrap-animate">
           <div class="probootstrap-card">
             <div class="probootstrap-card-media">
@@ -168,21 +168,42 @@ permalink: /nosotros
         <div class="col-md-4 probootstrap-animate">
           <div class="probootstrap-card">
             <div class="probootstrap-card-media">
-              <a target="_blank" href="http://worldofdreams.club/proximamente"><img src="img/projects/project-11.png" class="img-responsive img-border" alt=""></a>
+              <a target="_blank" href="http://homefort.club/proximamente"><img src="img/projects/project-11.png" class="img-responsive img-border" alt=""></a>
             </div>
         </div>
       </div>
         <div class="col-md-4 probootstrap-animate">
           <div class="probootstrap-card">
             <div class="probootstrap-card-media">
-              <a target="_blank" href="http://nica.work"><img src="img/projects/project-12.png" class="img-responsive img-border" alt=""></a>
+              <a target="_blank" href="http://techfort.shop"><img src="img/projects/project-12.png" class="img-responsive img-border" alt=""></a>
             </div>
           </div>
         </div>
         <div class="col-md-4 probootstrap-animate">
           <div class="probootstrap-card">
             <div class="probootstrap-card-media">
-              <a target="_blank" href="http://collectible.world"><img src="img/projects/project-7.png" class="img-responsive img-border" alt=""></a>
+              <a target="_blank" href="http://haycomercio.com"><img src="img/projects/project-3.png" class="img-responsive img-border" alt=""></a>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-4 probootstrap-animate">
+          <div class="probootstrap-card">
+            <div class="probootstrap-card-media">
+              <a target="_blank" href="http://nica.work"><img src="img/projects/work.png" class="img-responsive img-border" alt=""></a>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-4 probootstrap-animate">
+          <div class="probootstrap-card">
+            <div class="probootstrap-card-media">
+              <a target="_blank" href="http://nica.website"><img src="img/projects/sorteo.png" class="img-responsive img-border" alt=""></a>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-4 probootstrap-animate">
+          <div class="probootstrap-card">
+            <div class="probootstrap-card-media">
+              <a target="_blank" href="http://techfort.club"><img src="img/projects/project-7.png" class="img-responsive img-border" alt=""></a>
             </div>
           </div>
         </div>
@@ -196,13 +217,13 @@ permalink: /nosotros
         <div class="col-md-4 probootstrap-animate">
           <div class="probootstrap-card">
             <div class="probootstrap-card-media">
-              <a target="_blank" href="http://aesthetics.express"><img src="img/projects/project-9.png" class="img-responsive img-border" alt=""></a>
+              <a target="_blank" href="http://getceed.com"><img src="img/projects/getceed.png" class="img-responsive img-border" alt=""></a>
             </div>
           </div>
         </div>
       </div>
     </div>
-  <!-- END section -->
+</section><!-- END section -->
 
   <!--<div class="container">
     <div class="probootstrap-cta probootstrap-animate">
