--- a/about.html
+++ b/about.html
@@ -154,7 +154,7 @@ permalink: /nosotros
         <div class="col-md-4 probootstrap-animate">
           <div class="probootstrap-card">
             <div class="probootstrap-card-media">
-              <a target="_blank" href="http://carfreak.club"><img src="img/projects/project-6.png" class="img-responsive img-border" alt=""></a>
+              <a target="_blank" href="http://billete.club"><img src="img/projects/billete.png" class="img-responsive img-border" alt=""></a>
             </div>
           </div>
         </div>
