--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@ permalink: /
       </div>
 </div>
 <br><br><br>
-  <section class="probootstrap-section">
+   <section class="probootstrap-section">
     <div class="container">
       <div class="row">
         <div class="col-md-12 section-heading probootstrap-animate">
@@ -186,24 +186,24 @@ permalink: /
         <div class="col-md-4 probootstrap-animate">
           <div class="probootstrap-card">
             <div class="probootstrap-card-media">
-              <a target="_blank" href="http://amsoftware.biz"><img src="img/projects/project-1.png" class="img-responsive img-border" alt=""></a>
+              <a target="_blank" href="http://nica.space"><img src="img/projects/project-1.png" class="img-responsive img-border" alt=""></a>
             </div>
           </div>
         </div>
         <div class="col-md-4 probootstrap-animate">
           <div class="probootstrap-card">
             <div class="probootstrap-card-media">
-              <a target="_blank" href="http://amsoftware.info"><img src="img/projects/project-2.png" class="img-responsive img-border" alt=""></a>
+              <a target="_blank" href="http://nica.guru"><img src="img/projects/project-2.png" class="img-responsive img-border" alt=""></a>
             </div>
         </div>
       </div>
         <div class="col-md-4 probootstrap-animate">
           <div class="probootstrap-card">
             <div class="probootstrap-card-media">
-              <a target="_blank" href="http://haycomercio.com"><img src="img/projects/project-3.png" class="img-responsive img-border" alt=""></a>
+              <a target="_blank" href="http://carfreak.club"><img src="img/projects/project-6.png" class="img-responsive img-border" alt=""></a>
             </div>
           </div>
-        </div>
+        </div>        
         <div class="col-md-4 probootstrap-animate">
           <div class="probootstrap-card">
             <div class="probootstrap-card-media">
@@ -221,7 +221,7 @@ permalink: /
         <div class="col-md-4 probootstrap-animate">
           <div class="probootstrap-card">
             <div class="probootstrap-card-media">
-              <a target="_blank" href="http://carfreak.club"><img src="img/projects/project-6.png" class="img-responsive img-border" alt=""></a>
+              <a target="_blank" href="http://billete.club"><img src="img/projects/billete.png" class="img-responsive img-border" alt=""></a>
             </div>
           </div>
         </div>
@@ -235,21 +235,42 @@ permalink: /
         <div class="col-md-4 probootstrap-animate">
           <div class="probootstrap-card">
             <div class="probootstrap-card-media">
-              <a target="_blank" href="http://worldofdreams.club/proximamente"><img src="img/projects/project-11.png" class="img-responsive img-border" alt=""></a>
+              <a target="_blank" href="http://homefort.club/proximamente"><img src="img/projects/project-11.png" class="img-responsive img-border" alt=""></a>
             </div>
         </div>
       </div>
         <div class="col-md-4 probootstrap-animate">
           <div class="probootstrap-card">
             <div class="probootstrap-card-media">
-              <a target="_blank" href="http://nica.work"><img src="img/projects/project-12.png" class="img-responsive img-border" alt=""></a>
+              <a target="_blank" href="http://techfort.shop"><img src="img/projects/project-12.png" class="img-responsive img-border" alt=""></a>
             </div>
           </div>
         </div>
         <div class="col-md-4 probootstrap-animate">
           <div class="probootstrap-card">
             <div class="probootstrap-card-media">
-              <a target="_blank" href="http://collectible.world"><img src="img/projects/project-7.png" class="img-responsive img-border" alt=""></a>
+              <a target="_blank" href="http://haycomercio.com"><img src="img/projects/project-3.png" class="img-responsive img-border" alt=""></a>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-4 probootstrap-animate">
+          <div class="probootstrap-card">
+            <div class="probootstrap-card-media">
+              <a target="_blank" href="http://nica.work"><img src="img/projects/work.png" class="img-responsive img-border" alt=""></a>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-4 probootstrap-animate">
+          <div class="probootstrap-card">
+            <div class="probootstrap-card-media">
+              <a target="_blank" href="http://nica.website"><img src="img/projects/sorteo.png" class="img-responsive img-border" alt=""></a>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-4 probootstrap-animate">
+          <div class="probootstrap-card">
+            <div class="probootstrap-card-media">
+              <a target="_blank" href="http://techfort.club"><img src="img/projects/project-7.png" class="img-responsive img-border" alt=""></a>
             </div>
           </div>
         </div>
@@ -263,15 +284,13 @@ permalink: /
         <div class="col-md-4 probootstrap-animate">
           <div class="probootstrap-card">
             <div class="probootstrap-card-media">
-              <a target="_blank" href="http://aesthetics.express"><img src="img/projects/project-9.png" class="img-responsive img-border" alt=""></a>
+              <a target="_blank" href="http://getceed.com"><img src="img/projects/getceed.png" class="img-responsive img-border" alt=""></a>
             </div>
           </div>
         </div>
-        
       </div>
     </div>
-  </section>
-  <!-- END section -->
+</section><!-- END section -->
 
   <!--<div class="container">
     <div class="probootstrap-cta probootstrap-animate">
