--- a/about.html
+++ b/about.html
@@ -161,7 +161,7 @@ permalink: /nosotros
         <div class="col-md-4 probootstrap-animate">
           <div class="probootstrap-card">
             <div class="probootstrap-card-media">
-              <a target="_blank" href="http://moningsa.com"><img src="img/projects/project-10.png" class="img-responsive img-border" alt=""></a>
+              <a target="_blank" href="http://tcpnetwork.info"><img src="img/projects/project-10.png" class="img-responsive img-border" alt=""></a>
             </div>
           </div>
         </div>
