--- a/web.html
+++ b/web.html
@@ -123,7 +123,7 @@ permalink: /web
   <div class="plan startup">
     <header>
       <h4 class="plan-title">
-        UNA PÁGINA
+        STARTUP
       </h4>
       <div class="plan-cost"><span class="plan-type">Desde </span><span class="plan-price">$99.99</span></div>
     </header>
@@ -157,7 +157,7 @@ permalink: /web
   <div class="plan pro">
     <header>
       <h4 class="plan-title">
-        BÁSICO
+        PRO
       </h4>
       <div class="plan-cost"><span class="plan-type">Desde </span><span class="plan-price">$199.99</span></div>
     </header>
@@ -191,7 +191,7 @@ permalink: /web
   <div class="plan featured">
     <header>
       <h4 class="plan-title">
-        STANDARD
+        PREMIUM
       </h4>
       <div class="plan-cost"><span class="plan-type">Desde </span><span class="plan-price">$299.99</span></div>
     </header>
@@ -225,7 +225,7 @@ permalink: /web
   <div class="plan gold">
     <header>
       <h4 class="plan-title">
-        AVANZADO
+        GOLD
       </h4>
       <div class="plan-cost"><span class="plan-price">$399.99</span><span class="plan-type">/Mes</span></div>
     </header>
