--- a/web.html
+++ b/web.html
@@ -114,9 +114,9 @@ permalink: /web
 
       <div class="row" id="pricing">
 
-  <center><h1>COTIZA TU SITIO WEB</h1></center>
+  <center><h1>INICIEMOS</h1></center>
         <hr>
-        <p>Cotiza tu sitio web y en seguida nos pondremos en contacto para ofrecer una propuesta personalizada ajustada a tu presupuesto y necesidades.</p>
+        <p>Pague el 50% de cualquiera de nuestros paquetes por adelantado para iniciar el proceso y reciba 2 horas de consultoría valoradas en $420 completamente gratis. Un representante le contactará al correo ó teléfono proporcionado por usted en la interfaz de pago de PayPal dentro de un período de 6 horas a partir de la realización del pago.</p>
         <br>
 <br>
   <div class="snip1404">
