--- a/web.html
+++ b/web.html
@@ -116,7 +116,9 @@ permalink: /web
 
   <center><h1>INICIEMOS</h1></center>
         <hr>
-        <p>Pague el 50% de cualquiera de nuestros paquetes por adelantado para iniciar el proceso y reciba 2 horas de consultoría valoradas en $420 completamente gratis. Un representante le contactará al correo ó teléfono proporcionado por usted en la interfaz de pago de PayPal dentro de un período de 6 horas a partir de la realización del pago.</p>
+        <p>Pague el 50% de cualquiera de nuestros paquetes por adelantado para iniciar el proceso y reciba 2 horas de consultoría (valoradas en más de $500) completamente gratis.</p>
+        <br>
+        <p>Un representante le contactará al correo ó teléfono proporcionado por usted en la interfaz de pago de PayPal dentro de un período de 6 horas a partir de la realización del pago.</p>
         <br>
 <br>
   <div class="snip1404">
