--- a/web.html
+++ b/web.html
@@ -152,7 +152,7 @@ permalink: /web
       <li><i class=""> </i></li>
       <li><i class=""> </i></li>
     </ul>
-    <div class="plan-select"><a href="http://fb.com/amsoftware.es/">Cotizar</a></div>
+    <div class="plan-select"><a href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=QBZ92E9PGMN82">Iniciar</a></div>
   </div>
   <div class="plan pro">
     <header>
@@ -186,7 +186,7 @@ permalink: /web
       <li><i class=""> </i></li>
       <li><i class=""> </i></li>
     </ul>
-    <div class="plan-select"><a href="http://fb.com/amsoftware.es/">Cotizar</a></div>
+    <div class="plan-select"><a href="http://fb.com/amsoftware.es/">Iniciar</a></div>
   </div>
   <div class="plan featured">
     <header>
@@ -220,7 +220,7 @@ permalink: /web
       <li><i class=""> </i></li>
       <li><i class=""> </i></li>
     </ul>
-    <div class="plan-select"><a href="http://fb.com/amsoftware.es/">Cotizar</a></div>
+    <div class="plan-select"><a href="http://fb.com/amsoftware.es/">Iniciar</a></div>
   </div>
   <div class="plan gold">
     <header>
@@ -255,7 +255,7 @@ permalink: /web
 <li><i class="icon-checkmark" style="color:#ffffff;"> </i>CMS </li>
 <li><i class="icon-checkmark" style="color:#ffffff;"> </i>Más...</li>
     </ul>
-    <div class="plan-select"><a href="http://fb.com/amsoftware.es/">Cotizar</a></div>
+    <div class="plan-select"><a href="http://fb.com/amsoftware.es/">Iniciar</a></div>
   </div>
 </div>
 </div>
