--- a/web.html
+++ b/web.html
@@ -152,7 +152,7 @@ permalink: /web
       <li><i class=""> </i></li>
       <li><i class=""> </i></li>
     </ul>
-    <div class="plan-select"><a href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=QBZ92E9PGMN82">Iniciar</a></div>
+    <div class="plan-select"><a target="_blank" href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=QBZ92E9PGMN82">Iniciar</a></div>
   </div>
   <div class="plan pro">
     <header>
@@ -186,7 +186,7 @@ permalink: /web
       <li><i class=""> </i></li>
       <li><i class=""> </i></li>
     </ul>
-    <div class="plan-select"><a href="http://fb.com/amsoftware.es/">Iniciar</a></div>
+    <div class="plan-select"><a target="_blank" href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=HWR3KTXLNT7FA">Iniciar</a></div>
   </div>
   <div class="plan featured">
     <header>
@@ -220,7 +220,7 @@ permalink: /web
       <li><i class=""> </i></li>
       <li><i class=""> </i></li>
     </ul>
-    <div class="plan-select"><a href="http://fb.com/amsoftware.es/">Iniciar</a></div>
+    <div class="plan-select"><a target="_blank" href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=7PQWT53YA6Y8G">Iniciar</a></div>
   </div>
   <div class="plan gold">
     <header>
@@ -255,7 +255,7 @@ permalink: /web
 <li><i class="icon-checkmark" style="color:#ffffff;"> </i>CMS </li>
 <li><i class="icon-checkmark" style="color:#ffffff;"> </i>Más...</li>
     </ul>
-    <div class="plan-select"><a href="http://fb.com/amsoftware.es/">Iniciar</a></div>
+    <div class="plan-select"><a target="_blank" href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=JW4YS4A323WCG">Iniciar</a></div>
   </div>
 </div>
 </div>
@@ -263,17 +263,18 @@ permalink: /web
     </div>
   </section>
   <!-- END section -->  
-
+<!--
 <div class="container">
         <div class="probootstrap-cta probootstrap-animate">
           <center>
             <img style="height:420px;max-width:100%;" src="img/sprites/c2.png">
           </center>
         <br><h2 class="mb20" style="color:#ffffff; font-size: 150%;">Aprende más sobre lo que significa tener una prescencia en línea y entérate por qué en el año 2019 si una empresa no tiene un sitio web, está literalmente muerta.</h2><br>
-      <!--<p>.</p>-->
+   
         <div class="probootstrap-link-wrap">
           <p><a href="https://mailchi.mp/917b21d80251/amsoftware_subscribir" role="button" class="btn btn-subscribe">Descargar</a></p>
         </div>
       </div>
-    </div>
+</div>
+-->
     <br><br><br>
