--- a/branding.html
+++ b/branding.html
@@ -1,7 +1,7 @@
 ---
 layout: page
-title: AM Software | Branding
-permalink: /branding
+title: AM Software | Studio
+permalink: /studio
 ---
 
   <section class="probootstrap-slider flexslider">
@@ -11,7 +11,7 @@ permalink: /branding
           <div class="row">
             <div class="col-md-12 text-center">
               <div class="slides-text probootstrap-animate">
-                <h2>BRANDING</h2>
+                <h2>STUDIO</h2>
               </div>
             </div>
           </div>
@@ -25,7 +25,7 @@ permalink: /branding
     <div class="container">
       <div class="row">
 
-        <p>Ofrecemos servicios de branding, comunicación y marketing digital. Creamos marcas completamente desde cero, y ayudamos a desarrollar a empresas con marcas existentes que desean mejorar su identidad e imagen corporativa con el fin de proyectarse a segmentos de mercado específicos, según su enfoque de trabajo, con objetivos determinados a través de estratégias de comunicación visual y corporativa.</p>
+        <p>Ofrecemos servicios de comunicación, diseño gráfico, producción audiovisual, animación 3D, 2D, Desarrollo de Realidad Aumentada (AR), Realidad Virtual(VR), branding y marketing digital. Creamos marcas completamente desde cero, y ayudamos a desarrollar a empresas con marcas existentes que desean mejorar su identidad e imagen corporativa con el fin de proyectarse a segmentos de mercado específicos, según su enfoque de trabajo, con objetivos determinados a través de estratégias de comunicación visual y corporativa.</p>
 
         <p>Definimos problemas de comunicación e identidad corporativa que poseen nuestros clientes y delimitamos objetivos específicos para crear una conceptualización de estrategia comunicacional y visual junto con la producción de los elementos gráficos necesarios para el desarrollo y refinamiento de una imagen e identidad definida y efectiva que le brindará un mayor posicionamiento y competitividad a su marca. </p>
 
@@ -177,7 +177,7 @@ permalink: /branding
 
 <div class="row" id="pricing">
 
-  <center><h1>COTIZA NUESTROS SERVICIOS</h1></center>
+  <center><h1>INICIEMOS</h1></center>
         <hr>
         <p>Cotiza cualquiera de nuestros paquetes y en seguida nos pondremos en contacto para ofrecer una propuesta personalizada ajustada a tu presupuesto y necesidades.</p>
         <br>
@@ -202,7 +202,7 @@ permalink: /branding
       <li><i class=""> </i></li>
       <li><i class=""> </i></li>
     </ul>
-    <div class="plan-select"><a href="http://fb.com/amsoftware.es/">Cotizar</a></div>
+    <div class="plan-select"><a target="_blank" href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=HP33XS5K9HG2U">Iniciar</a></div>
   </div>
   <div class="plan pro">
     <header>
@@ -221,7 +221,7 @@ permalink: /branding
       <li><i class=""> </i></li>
       <li><i class=""> </i></li>
     </ul>
-    <div class="plan-select"><a href="http://fb.com/amsoftware.es/">Cotizar</a></div>
+    <div class="plan-select"><a target="_blank" href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=G43N3BG8LAEBL">Iniciar</a></div>
   </div>
   <div class="plan featured">
     <header>
@@ -240,7 +240,7 @@ permalink: /branding
       <li><i class=""> </i></li>
       <li><i class=""> </i></li>
     </ul>
-    <div class="plan-select"><a href="http://fb.com/amsoftware.es/">Cotizar</a></div>
+    <div class="plan-select"><a target="_blank" href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=XQEJKYVESZK3G">Iniciar</a></div>
   </div>
   <div class="plan gold">
     <header>
@@ -259,7 +259,7 @@ permalink: /branding
       <li><i class="icon-checkmark" style="color:#ffffff;"> </i>Video Promocional</li>
       <li><i class="icon-checkmark" style="color:#ffffff;"> </i>10 Diseños Publicitarios</li>
     </ul>
-    <div class="plan-select"><a href="http://fb.com/amsoftware.es/">Cotizar</a></div>
+    <div class="plan-select"><a target="_blank" href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=5AWVB4VVXGRLW">Iniciar</a></div>
   </div>
 </div>
 </div>
@@ -279,7 +279,7 @@ permalink: /branding
       <li><i class="icon-checkmark" style="color:#ffffff;"> </i>1 Diseño/Día</li>
       <li><i class=""> </i></li>
     </ul>
-    <div class="plan-select"><a href="http://fb.com/amsoftware.es/">Cotizar</a></div>
+    <div class="plan-select"><a target="_blank" href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=Q33XY52RKJYBA">Iniciar</a></div>
   </div>
   <div class="plan pro">
     <header>
@@ -292,7 +292,7 @@ permalink: /branding
       <li><i class="icon-checkmark" style="color:#ffffff;"> </i>3 Diseños/Día</li>
       <li><i class=""> </i></li>
     </ul>
-    <div class="plan-select"><a href="http://fb.com/amsoftware.es/">Cotizar</a></div>
+    <div class="plan-select"><a target="_blank" href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=2HJAQVQMM3C68">Iniciar</a></div>
   </div>
   <div class="plan featured">
     <header>
@@ -305,7 +305,7 @@ permalink: /branding
       <li><i class="icon-checkmark" style="color:#ffffff;"> </i>6 Diseños/Día</li>
       <li><i class=""> </i></li>
     </ul>
-    <div class="plan-select"><a href="http://fb.com/amsoftware.es/">Cotizar</a></div>
+    <div class="plan-select"><a target="_blank" href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=9CYZVE5SHJUEA">Iniciar</a></div>
   </div>
   <div class="plan gold">
     <header>
@@ -318,7 +318,7 @@ permalink: /branding
       <li><i class="icon-checkmark" style="color:#ffffff;"> </i>8 Diseños/Día</li>
       <li><i class=""> </i></li>
     </ul>
-    <div class="plan-select"><a href="http://fb.com/amsoftware.es/">Cotizar</a></div>
+    <div class="plan-select"><a target="_blank" href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=5WJBM7NSGNAA2">Iniciar</a></div>
   </div>
 </div>
 </div>
@@ -339,7 +339,7 @@ permalink: /branding
       <li><i class="icon-checkmark" style="color:#ffffff;"> </i>1 Diseño/Día</li>
       <li><i class="icon-checkmark" style="color:#ffffff;"> </i>Administración Redes Sociales</li>
     </ul>
-    <div class="plan-select"><a href="http://fb.com/amsoftware.es/">Cotizar</a></div>
+    <div class="plan-select"><a target="_blank" href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=WL3TTPVQAEBMJ">Iniciar</a></div>
   </div>
   <div class="plan pro">
     <header>
@@ -352,7 +352,7 @@ permalink: /branding
       <li><i class="icon-checkmark" style="color:#ffffff;"> </i>3 Diseños/Día</li>
       <li><i class="icon-checkmark" style="color:#ffffff;"> </i>Administración Redes Sociales</li>
     </ul>
-    <div class="plan-select"><a href="http://fb.com/amsoftware.es/">Cotizar</a></div>
+    <div class="plan-select"><a target="_blank" href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=FWZQDF7ZUP85J">Iniciar</a></div>
   </div>
   <div class="plan featured">
     <header>
@@ -365,7 +365,7 @@ permalink: /branding
       <li><i class="icon-checkmark" style="color:#ffffff;"> </i>6 Diseños/Día</li>
       <li><i class="icon-checkmark" style="color:#ffffff;"> </i>Administración Redes Sociales</li>
     </ul>
-    <div class="plan-select"><a href="http://fb.com/amsoftware.es/">Cotizar</a></div>
+    <div class="plan-select"><a target="_blank" href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=2H6YYCW4YMVSW">Iniciar</a></div>
   </div>
   <div class="plan gold">
     <header>
@@ -378,7 +378,7 @@ permalink: /branding
       <li><i class="icon-checkmark" style="color:#ffffff;"> </i>8 Diseños/Día</li>
       <li><i class="icon-checkmark" style="color:#ffffff;"> </i>Administración Redes Sociales</li>
     </ul>
-    <div class="plan-select"><a href="http://fb.com/amsoftware.es/">Cotizar</a></div>
+    <div class="plan-select"><a target="_blank" href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=K36RYBKBBJZBU">Iniciar</a></div>
   </div>
 </div>
 </div>
@@ -388,7 +388,9 @@ permalink: /branding
         <br><h2 class="mb20" style="color:#ffffff; font-size: 150%;">TAMBIÉN OFRECEMOS PAQUETES A LA MEDIDA PARA SATISFACER TUS NECESIDADES ESPECÍFICAS. <br> CONTÁCTANOS HOY PARA RECIBIR UNA COTIZACIÓN PERSONALIZADA.</h2><br>
       <!--<p>.</p>-->
         <div class="probootstrap-link-wrap">
+          <center>
           <p><a href="/contacto" role="button" class="btn btn-subscribe">Cotizar</a></p>
+          </center>
         </div>
 </div>
 
