--- a/studio.html
+++ b/studio.html
@@ -389,7 +389,7 @@ permalink: /studio
       <!--<p>.</p>-->
         <div class="probootstrap-link-wrap">
           <center>
-          <p><a href="/contacto" role="button" class="btn btn-subscribe">Cotizar</a></p>
+          <a href="/contacto" role="button" class="btn btn-subscribe">Cotizar</a>
           </center>
         </div>
 </div>
